--- a/JDBCProj1/.classpath
+++ b/JDBCProj1/.classpath
@@ -8,5 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Nareshit/Downloads/mysql-connector-java-8.0.25.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nareshit/Downloads/commons-io-2.10.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nareshit/Downloads/postgresql-42.2.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
