--- a/FileUploadAndDownloadApp/.classpath
+++ b/FileUploadAndDownloadApp/.classpath
@@ -39,5 +39,10 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Nareshit/Downloads/commons-io-2.11.0 (1).jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
